Legend
------
+  Addition
-  Removal
*  Alteration/other
!  Alteration/Removal/other that breaks backwards compatibility

2004.05.02 (alpha/beta)
-----------------------
Release stats (only counts code written by me):
Code:  20484 lines,  833493 bytes (60.81%), avg. 41 BPL
Docs:   7359 lines,  537105 bytes (39.19%), avg. 73 BPL
Total: 27843 lines, 1370598 bytes, avg. 49 BPL

Release notes:
This release has a lot more interface changes than I'd have liked, but the
process of documenting the source code reveals problems with the design that
may not have been evident at earlier stages.

* Made Asteroids example use the CD drive better
* Fixed a bug in which OnControlRemoved/OnControlAdded could be fired before
  the control was actually removed from its parent's control array. This was
  almost never a real problem, but it could cause an exception if multiple
  modal windows were opened simultaneously.
* Added the Control.DrawSurface property
* The audio quality in the Audio example was set to low. Made it use the
  default instead.
+ Added a property to FormBase that gets which button was clicked on a form
+ Started a simple color picker dialog
* Made Button control only depress when clicked with the left mouse button
+ Added a property to the ButtonBase control that controlled whether or not
  it would automatically update the Pressed property
+ Added a property to the Button control that controlled whether or not it
  can draw pressed even when the mouse was not over the button
+ Added BorderColor properties to the FormBase and LabelBase controls
+ Added low-level support for OpenGL 1.2 and 1.3
! Removed some overloads of low-level OpenGL functions that are not likely
  to be used
+ Added some more overloads for OpenGL 1.1 functions
* Fixed some bugs in OpenGL.TexImage2D
! Changed some of the overloads for OpenGL.TexImage2D
  (eg, removed the 'target' parameter)
+ Started on a wrapper for a 2D OpenGL texture
+ Added a 2D Rectangle class